--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#2c3e50" />
     <meta
       name="description"
       content="SALESAAI - AI-powered sales assistant for real estate agents"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="./logo.svg" />
+    <link rel="manifest" href="./manifest.json" />
     <title>SALESAAI - Real Estate Sales Assistant</title>
     <!-- Preload fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
